refactor laij code phần order và kitchen cho gọn lại